<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/g_fragment"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rules"
            android:checked="true"
            android:title="@string/rules" />
        <item
            android:id="@+id/nav_intercepted"
            android:title="@string/intercepted" />
    </group>

    <!--<item android:title="">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_system_log"-->
    <!--android:title="@string/system_log" />-->
    <!--&lt;!&ndash;<item&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/nav_send"&ndash;&gt;-->
    <!--&lt;!&ndash;android:icon="@drawable/ic_menu_send"&ndash;&gt;-->
    <!--&lt;!&ndash;android:title="Send" />&ndash;&gt;-->
    <!--</menu>-->
    <!--</item>-->

    <group android:id="@+id/g_activity">
        <item
            android:id="@+id/nav_system_log"
            android:title="@string/system_log" />
    </group>

</menu>
